# EEL7514

./: pyproject.toml
T1/: T1_EEL7514-2.ipynb
T2/: T2_EEL7514.ipynb  grid_search_all_models_train.py  grid_search_dt_train.py  grid_search_gb_train.py  grid_search_rf_train.py
classes/1/: 1b_exemplo.ipynb  question_7.py
classes/2/: 2-regressao-linear.ipynb
classes/4/: 4a_regressao_logistica.ipynb  4b_svm.ipynb
classes/5/: 5b_ensembles.ipynb
classes/6/: 6_redes_neurais.ipynb
classes/7/: ex_1.py
classes/8/: 8b_redes_recorrentes.ipynb
